--- a/lab-a/index.html
+++ b/lab-a/index.html
@@ -8,11 +8,11 @@
   </head>
   <body>
     <div class="container">
-      <header><h1></h1></header>
-      <nav></nav>
-      <main></main>
-      <aside></aside>
-      <footer>&copy; 2023 Wojciech Klimczewski 52524 | All Rights Reserved</footer>
+      <header class="header"><h1></h1></header>
+      <nav class="menu"></nav>
+      <main class="main"></main>
+      <aside class="advertisement"></aside>
+      <footer class="footer">&copy; 2023 Wojciech Klimczewski 52524 | All Rights Reserved</footer>
     </div>
   </body>
 </html>
