--- a/lab-a/index.html
+++ b/lab-a/index.html
@@ -3,15 +3,35 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Title</title>
+    <title>Portal wędkarski</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="container">
-      <header class="header"><h1></h1></header>
-      <nav class="menu"></nav>
-      <main class="main"></main>
-      <aside class="advertisement"></aside>
+      <header class="header"><h1>Portal wędkarski</h1></header>
+      <nav class="menu">
+        <ol>
+          <li>Spławik</li>
+          <li>Grunt</li>
+          <li>Spinning</li>
+        </ol>
+      </nav>
+      <main class="main">
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quibusdam cumque aspernatur excepturi consequuntur
+        necessitatibus qui, omnis ratione repellat iure provident at ipsa eaque quasi. Nemo, ea consequatur? Amet,
+        officiis hic. Error quod atque omnis corporis. Porro repellat provident, neque quos consectetur qui ipsa
+        similique nulla, voluptatem ipsam doloribus temporibus blanditiis quis iste vero? Cum beatae iusto fugiat,
+        possimus praesentium nihil. Sit sunt, fugit iure sapiente non odio, omnis consequuntur, molestias nesciunt quo
+        nisi. Cum eaque voluptatum debitis vitae esse! Sint mollitia perspiciatis iste corrupti in et nostrum totam ipsa
+        hic! Expedita minima, nemo officia deserunt veniam inventore quaerat vel nesciunt rem neque unde eligendi, autem
+        delectus possimus numquam dolor. Velit voluptates odio adipisci quibusdam assumenda. Temporibus dolorum qui
+        natus voluptate!
+      </main>
+      <aside class="advertisement">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum suscipit totam laudantium quod exercitationem
+        porro neque eaque voluptatem nihil assumenda aut voluptatibus, esse architecto soluta? Blanditiis voluptatibus
+        quam odio voluptatum!
+      </aside>
       <footer class="footer">&copy; 2023 Wojciech Klimczewski 52524 | All Rights Reserved</footer>
     </div>
   </body>
