refactor fill html content

--- a/lab-a/index.html
+++ b/lab-a/index.html
@@ -11,28 +11,51 @@
       <header class="header"><h1>Portal wędkarski</h1></header>
       <nav class="menu">
         <ol>
-          <li>Spławik</li>
-          <li>Grunt</li>
-          <li>Spinning</li>
+          <li class="active"><a href="#">Spławik</a></li>
+          <li><a href="#">Grunt</a></li>
+          <li><a href="#">Spinning</a></li>
         </ol>
       </nav>
       <main class="main">
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quibusdam cumque aspernatur excepturi consequuntur
-        necessitatibus qui, omnis ratione repellat iure provident at ipsa eaque quasi. Nemo, ea consequatur? Amet,
-        officiis hic. Error quod atque omnis corporis. Porro repellat provident, neque quos consectetur qui ipsa
-        similique nulla, voluptatem ipsam doloribus temporibus blanditiis quis iste vero? Cum beatae iusto fugiat,
-        possimus praesentium nihil. Sit sunt, fugit iure sapiente non odio, omnis consequuntur, molestias nesciunt quo
-        nisi. Cum eaque voluptatum debitis vitae esse! Sint mollitia perspiciatis iste corrupti in et nostrum totam ipsa
-        hic! Expedita minima, nemo officia deserunt veniam inventore quaerat vel nesciunt rem neque unde eligendi, autem
-        delectus possimus numquam dolor. Velit voluptates odio adipisci quibusdam assumenda. Temporibus dolorum qui
-        natus voluptate!
+        <h2>Wędkarstwo spławikowe</h2>
+        <p>
+          Wędkarstwo spławikowe to jedna z najpopularniejszych technik wędkarskich, która przyciąga zarówno
+          początkujących, jak i doświadczonych wędkarzy. Ta metoda pozwala na łowienie ryb na różnych głębokościach,
+          używając spławika jako pływaka, który sygnalizuje zbliżenie się ryby. Jest to technika wymagająca
+          cierpliwości, precyzji i umiejętności obserwacji.
+        </p>
+        <h3>Podstawowe zasady wędkarstwa spławikowego</h3>
+        <p>
+          Wędkarstwo spławikowe obejmuje użycie lekkiego sprzętu, który umożliwia precyzyjne rzuty i delikatne
+          prezentowanie przynęty rybom. Spławik jest umieszczany na linie w odpowiedniej odległości od haczyka, a
+          wędkarz obserwuje jego ruchy, czekając na sygnał, że ryba zainteresowała się przynętą. Wędkarze spławikowi
+          stosują różnorodne przynęty, takie jak robaki, larwy owadów wodnych, czy sztuczne przynęty, aby przyciągnąć
+          różne gatunki ryb.
+        </p>
+        <p>
+          Wędkarze spławikowi często wybierają się na spokojne wody, takie jak jeziora, stawy czy rzeki o niewielkim
+          nurcie. Technika ta pozwala na łowienie różnych gatunków ryb, takich jak leszcze, płocie, okonie czy karpie.
+          Wędkarze muszą być cierpliwi, ponieważ czasami ryby mogą być ostrożne i delikatnie badać przynętę, zanim
+          zdecydują się na brań.
+        </p>
+        <h3>Wybór odpowiedniego sprzętu</h3>
+        <p>
+          Podstawowym elementem wędkarstwa spławikowego jest odpowiedni sprzęt. Wędkarze wybierają lekkie wędki o
+          odpowiedniej długości i giętkości, które pozwalają na precyzyjne zarzucanie przynęty. Linia powinna być cienka
+          i niewidoczna dla ryb, co zwiększa szanse na złowienie ryby. Wybór odpowiedniego haczyka oraz spławika zależy
+          od rodzaju ryb, które są celem wędkarza.
+        </p>
+        <p>
+          Wędkarstwo spławikowe to nie tylko sposób na spędzanie czasu na łonie natury, ale także sztuka, która wymaga
+          wiedzy, doświadczenia i precyzji. Niezależnie od tego, czy jesteś początkującym wędkarzem czy doświadczonym
+          pasjonatem, wędkarstwo spławikowe może dostarczyć ci niezapomnianych chwil podczas łowienia ryb i pozwolić na
+          odkrywanie piękna wodnych przygód.
+        </p>
       </main>
       <aside class="advertisement">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum suscipit totam laudantium quod exercitationem
-        porro neque eaque voluptatem nihil assumenda aut voluptatibus, esse architecto soluta? Blanditiis voluptatibus
-        quam odio voluptatum!
+        <img src="static/rybki.jpg" alt="advertisement" />
       </aside>
-      <footer class="footer">&copy; 2023 Wojciech Klimczewski 52524 | All Rights Reserved</footer>
+      <footer class="footer"><p>&copy; 2023 Wojciech Klimczewski 52524 | All Rights Reserved</p></footer>
     </div>
   </body>
 </html>
