--- a/lab-a/index.html
+++ b/lab-a/index.html
@@ -14,6 +14,7 @@
           <li class="active"><a href="#">Spławik</a></li>
           <li><a href="#">Grunt</a></li>
           <li><a href="#">Spinning</a></li>
+          <li><a href="index2.html">OTHER STYLE</a></li>
         </ol>
       </nav>
       <main class="main">
