--- a/lab-a/index2.html
+++ b/lab-a/index2.html
@@ -52,6 +52,7 @@
           pasjonatem, wędkarstwo spławikowe może dostarczyć ci niezapomnianych chwil podczas łowienia ryb i pozwolić na
           odkrywanie piękna wodnych przygód.
         </p>
+        <img src="./static/Fish.svg" alt="Fish" />
       </main>
       <aside class="advertisement">
         <img src="static/rybki.jpg" alt="advertisement" />
