--- a/lab-a/index.html
+++ b/lab-a/index.html
@@ -55,7 +55,7 @@
         <img src="./static/Fish.svg" alt="Fish" />
       </main>
       <aside class="advertisement">
-        <img src="static/rybki.jpg" alt="advertisement" />
+        <img src="./static/rybki.jpg" alt="advertisement" />
       </aside>
       <footer class="footer"><p>&copy; 2023 Wojciech Klimczewski 52524 | All Rights Reserved</p></footer>
     </div>
