--- a/lab-a/index.html
+++ b/lab-a/index.html
@@ -52,10 +52,10 @@
           pasjonatem, wędkarstwo spławikowe może dostarczyć ci niezapomnianych chwil podczas łowienia ryb i pozwolić na
           odkrywanie piękna wodnych przygód.
         </p>
-        <img src="./static/Fish.svg" alt="Fish" />
+        <img src="./static/Fish.svg" alt="Fish" class="background" />
       </main>
       <aside class="advertisement">
-        <img src="./static/rybki.jpg" alt="advertisement" />
+        <img src="./static/rybki.jpg" alt="advertisement" class="ad" />
       </aside>
       <footer class="footer"><p>&copy; 2023 Wojciech Klimczewski 52524 | All Rights Reserved</p></footer>
     </div>
